--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+uWSGI
 celery==5.3.6
 channels==4.2.0
 channels_redis==4.2.1
@@ -9,6 +10,8 @@ django-shortuuidfield==0.1.3
 django-timezone-field==7.0
 djangorestframework==3.15.2
 pillow==11.0.0
+pytz==2024.2
 redis==5.2.0
 shortuuid==1.0.13
+
 psycopg2-binary==2.9.9
